RESOLVED FIXED172837
REGRESSION (r217296): Dragging a video only shows controls during drag event
https://bugs.webkit.org/show_bug.cgi?id=172837
Summary REGRESSION (r217296): Dragging a video only shows controls during drag event
Simon Fraser (smfr)
Reported 2017-06-01 15:32:36 PDT
REGRESSION (r217296): Dragging a video only shows controls during drag event
Attachments
Patch (1.95 KB, patch)
2017-06-01 15:35 PDT, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2017-06-01 15:35:18 PDT
Simon Fraser (smfr)
Comment 2 2017-06-01 15:35:41 PDT
Build Bot
Comment 3 2017-06-01 15:40:20 PDT
Attachment 311766 [details] did not pass style-queue: ERROR: Source/WebCore/rendering/RenderLayer.cpp:4386: Multi line control clauses should use braces. [whitespace/braces] [4] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 4 2017-06-01 16:16:34 PDT
Comment on attachment 311766 [details] Patch Clearing flags on attachment: 311766 Committed r217688: <http://trac.webkit.org/changeset/217688>
WebKit Commit Bot
Comment 5 2017-06-01 16:16:35 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.