REGRESSION (r217296): Dragging a video only shows controls during drag event https://bugs.webkit.org/show_bug.cgi?id=172837 rdar://problem/32434661

Reviewed by Zalan Bujtas.

r217296 changed RenderVideo::paintReplaced() from checking paintBehavior() flags on the FrameView
to paintInfo.paintBehavior flags. However, RenderLayer was stripping the PaintBehaviorFlattenCompositingLayers
flag from the paintInfo.paintBehavior flags, so fix that.

Not easily testable.

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::paintLayerContents):


Canonical link: https://commits.webkit.org/189724@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@217688 268f45cc-cd09-0410-ab3c-d52691b4dbfc